--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -23,7 +25,14 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "cache-manager": "^5.4.0",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.1",
-    "grammy": "^1.20.3"
+    "express": "^4.18.2",
+    "grammy": "^1.20.3",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    "sequelize-typescript": "^2.1.6"
   }
 }
